--- a/contact.htm
+++ b/contact.htm
@@ -23,150 +23,133 @@
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><font
  size="4">&nbsp;Pierre DUBOIS</font>&nbsp;</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;Professor
+&nbsp;Professor
 of Economics,&nbsp;<a style="color: rgb(44, 19, 209);" target="_blank"
  href="http://tse-fr.eu/">Toulouse
 School of Economics</a><span style="color: rgb(0, 0, 0);">,&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0);" target="_blank"
  href="http://www.ut-capitole.fr/">University
 of Toulouse
-1 Capitole</a><br>
-<br>
-<span style="font-family: Calibri;"></span>
-</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="font-family: Calibri;">&nbsp;Co-Editor, <a
+1 Capitole</a>
+<div><br>
+<span style="font-family: Calibri;">&nbsp;Co-Editor, <a
  style="color: rgb(0, 0, 0); text-decoration: none;"
  href="https://academic.oup.com/jeea" target="_blank">Journal
 of the
 European Economic Association</a></span>
-(2021-)</p>
+(2021-)</div>
+<div>
 &nbsp;Director <a href="https://www.tse-fr.eu/health" target="_blank">TSE
 Health Center</a> (2021-)
-<font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</font><a
+<font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</font></div>
+<div>&nbsp;<a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="http://www.ifs.org.uk/people/profile/377" target="_blank">IFS
 Research Fellow</a>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="color: rgb(0, 0, 0);">&nbsp;</span><a
+</div>
+<div><span style="color: rgb(0, 0, 0);">&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="http://www.cepr.org/" target="_blank">CEPR</a>
-Research Fellow</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="font-family: Calibri;">&nbsp;</span>Fellow
+Research Fellow
+</div>
+<div><span style="font-family: Calibri;">&nbsp;</span>Fellow
 of the <a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://appliedeconometrics.org/about/fellows" target="_blank">International
-Association of Applied Econometrics</a></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="font-family: Calibri;">&nbsp;</span>Fellow
+Association of Applied Econometrics</a>
+</div>
+<div><span style="font-family: Calibri;">&nbsp;</span>Fellow
 of the <a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://www.eeassoc.org/fellows" target="_blank">European
 Economic
-Association</a></p>
-<span style="font-family: Calibri;"></span><br>
-<span style="font-family: Calibri;"></span>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;<span
- style="color: rgb(0, 0, 0); text-decoration: none;">Visiting
+Association</a></div>
+<div><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span></div>
+<div>&nbsp;<span style="color: rgb(0, 0, 0); text-decoration: none;">Visiting
 Professor, Harvard University, Department of Economics
-(2015, 2019-2020)</span></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="font-family: Calibri;">&nbsp;Scientific
+(2015, 2019-2020)</span>
+</div>
+<div><span style="font-family: Calibri;">&nbsp;Scientific
 Director of the Toulouse School of Economics (2015-2019)
-</span><br>
-<span style="font-family: Calibri;"></span></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="color: rgb(0, 0, 0);">&nbsp;</span><a
+</span></div>
+<div><span style="color: rgb(0, 0, 0);">&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="http://www.iufrance.fr/les-membres-de-liuf/membre/1140-pierre-dubois.html"
  target="_blank">Institut
 Universitaire de France</a> Junior
-Member (2011-2015)</p>
-<span style="font-family: Calibri;">&nbsp;</span><span
+Member (2011-2015)</div>
+<div><span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Visiting Scholar,
 Department
 of Economics, Northwestern University (2010-2011)
-<br>
-<br>
-</span><span style="font-family: Calibri;"></span><span
+</span></div>
+<div><span style="font-family: Calibri;"></span></div>
+<div><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;Managing
 Editor of&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/"
  target="_blank">International Journal of Industrial
 Organization</a><span style="font-family: Calibri;">
-(2013-2018)<br>
-&nbsp;Associate Editor of <a
+(2013-2018)</span></div>
+<div><span style="font-family: Calibri;">&nbsp;Associate Editor of <a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://www.journals.elsevier.com/european-economic-review"
  target="_blank">European Economic Review</a>
-(2012-)<br>
-&nbsp;Associate Editor of <a
+(2012-)</span></div>
+<div><span style="font-family: Calibri;">&nbsp;Associate Editor of <a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://annals.ensae.fr/" target="_blank">Annals
 of Economics
-and Statistics</a> (2009-)</span><br style="font-family: Calibri;">
-<span style="font-family: Calibri;">
+and Statistics</a> (2009-)</span></div>
+<div><span style="font-family: Calibri;">
 &nbsp;E-mail:&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="mailto:pierre.dubois@tse-fr.eu">pierre.dubois@tse-fr.eu</a>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
- name="Research Interests">&nbsp;Research Interests</a>
-:<br>
-&nbsp;Applied Microeconomics,&nbsp;Applied Econometrics<br>
-</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;Industrial
+</div>
+<div>&nbsp;
+</div>
+<div><a name="Research Interests">&nbsp;Research Interests</a>
+:</div>
+<div>&nbsp;Applied Microeconomics,&nbsp;Applied Econometrics</div>
+<div>
+&nbsp;Industrial
 Organization,&nbsp;&nbsp;Health
-Economics, Development Economics</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;</p>
-<span style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</span><font
+Economics, Development Economics
+</div>
+<div>&nbsp;</div>
+<div><span style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</span><font
  style="color: rgb(0, 0, 0); font-family: Calibri;"><a
  style="text-decoration: none; color: rgb(0, 0, 0);" href="cv_web.pdf"
  target="_blank">Complete
-CV</a><br>
-&nbsp;<a style="text-decoration: none;"
+CV</a></font></div>
+<div><font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<a
+ style="text-decoration: none;"
  href="http://www.tse-fr.eu/people/pierre-dubois" target="_blank"><span
- style="color: rgb(0, 0, 0);">TSE web page</span><br>
-</a>&nbsp;<a style="text-decoration: none; color: rgb(0, 0, 0);"
+ style="color: rgb(0, 0, 0);">TSE web page</span></a></font></div>
+<div><font style="color: rgb(0, 0, 0); font-family: Calibri;"><a
+ style="text-decoration: none;"
+ href="http://www.tse-fr.eu/people/pierre-dubois" target="_blank"></a>&nbsp;<a
+ style="text-decoration: none; color: rgb(0, 0, 0);"
  href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr"
- target="_blank">Google Scholar Page</a><br>
-&nbsp;<a style="text-decoration: none; color: rgb(0, 0, 0);"
+ target="_blank">Google Scholar Page</a></font></div>
+<div><font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<a
+ style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://voxeu.org/users/pierredubois0" target="_blank">CEPR
 Vox page</a></font>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">Address:
-</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">Toulouse
-School of Economics</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">1
-Esplanade de l'Universit&eacute;</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">31080
-Toulouse Cedex 06</p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">France</p>
+</div>
+<div>Address:
+</div>
+<div>Toulouse
+School of Economics
+</div>
+<div>1
+Esplanade de l'Universit&eacute;
+</div>
+<div>31080
+Toulouse Cedex 06
+</div>
+<div>France</div>
 <font style="font-family: Calibri;"><a
  href="https://voxeu.org/users/pierredubois0" target="_blank"><br>
 </a></font>
