--- a/contact.htm
+++ b/contact.htm
@@ -39,7 +39,8 @@ of the
 European Economic Association</a></span>
 (2021-)</div>
 <div>
-&nbsp;Director <a href="https://www.tse-fr.eu/health" target="_blank">TSE
+&nbsp;Director <a style="color: rgb(0, 0, 0); text-decoration: none;"
+ href="https://www.tse-fr.eu/health" target="_blank">TSE
 Health Center</a> (2021-)
 <font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</font></div>
 <div>&nbsp;<a
