--- a/other.htm
+++ b/other.htm
@@ -276,10 +276,15 @@ Conferences</a></h3>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO seminar, Wharton, University of
 Pennsylvania, November 10, 2021<br>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - Asia-Pacific Industrial
+</span><span style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; - Workshop on the Economics of Antibiotics, Toulouse, December
+6, 2021<br>
+</span><span style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; - Asia-Pacific Industrial
 Organization Conference, National University of Singapore, December 14,
 2021<br>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - ASSA Meeting, American Economic
+</span><span style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; - ASSA Meeting, American Economic
 Association, January 9, 2022<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
