--- a/other.htm
+++ b/other.htm
@@ -310,7 +310,8 @@ seminar, Uniersity of Mannheim, May 31, 2022</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; </span><span style="font-family: Calibri;">-
+&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; </span><span
+ style="font-family: Calibri;">-
 University of Lyon, GATE, October 11, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
@@ -326,7 +327,7 @@ International Workshop on Quantifying the impact of food and lifestyle
 policies, Rimini, Italy, September 7, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;-
+&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;-
 Field Surgery Session - Pharmaceutical Pricing, EEA</span><span
  style="font-family: Calibri;"> ESEM</span><span
  style="font-family: Calibri;"> Congress August 24, 2021</span><br>
@@ -337,7 +338,7 @@ Field Surgery Session - Pharmaceutical Pricing, EEA</span><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - IO^2 seminar,&nbsp;July 6, 2021<br>
+&nbsp;&nbsp; &nbsp; &nbsp; - IO^2 seminar,&nbsp;July 6, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -
 American Society of
