--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -32,7 +32,8 @@ papers:</i></p>
  lang="EN-US"><br>
 &nbsp;&nbsp;&nbsp; "<a
  style="color: rgb(0, 0, 0); text-decoration: none;"
- href="dgv05172019.pdf" target="_blank">Bargaining and International
+ href="dgv_October2021.pdf" target="_blank">Bargaining and
+International
 Reference Pricing in the Pharmaceutical Industry</a>" with Ashvin
 Gandhi
 and Shoshana Vasserman<br>
