--- a/other.htm
+++ b/other.htm
@@ -79,6 +79,13 @@ of the CEPR Virtual Industrial Organization seminar, Fall, 2021 <a
   </li>
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
+of a Workshop on the Economics of Antibiotics, Toulouse School of
+Economics, December 6, 2021 <a
+ href="Program_Workshop_Antibiotics_06122021_version_03122021.pdf"
+ target="_blank">Program</a></p>
+  </li>
+  <li>
+    <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
 of MIT-TSE
 Conference on Health Economics with Amy Finkelstein and Jean Tirole,
 MIT,&nbsp;(postponed). <a
@@ -274,11 +281,9 @@ Conferences</a></h3>
  name="Forthcoming">Forthcoming</a>
 :</p>
 <span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
-&nbsp; - Workshop on the Economics of Antibiotics, Toulouse, December
-6, 2021<br>
-</span><span style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
-&nbsp; - IO Seminar, Toulouse Shcool of Economics Toulouse, December
+&nbsp; - IO Seminar, Toulouse Shcool of Economics, Toulouse, December
 13, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
@@ -304,7 +309,14 @@ seminar, Uniersity of Mannheim, May 31, 2022<br>
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.<span
  style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;"></span></span></span><span
  style="font-family: Calibri;">&nbsp;</span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+ style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; - Workshop on the Economics of Antibiotics, Toulouse</span><span
+ style="font-family: Calibri;"> Shcool of Economics</span><span
+ style="font-family: Calibri;">, December
+6, 2021<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO seminar, Wharton, University of
 Pennsylvania, November 10, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
