--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -38,7 +38,9 @@ Reference Pricing in the Pharmaceutical Industry</a>" with Ashvin
 Gandhi
 and Shoshana Vasserman<br>
 <br>
-&nbsp; &nbsp; &nbsp;"<a href="DGOARE.pdf" target="_blank">The Use of
+&nbsp; &nbsp; &nbsp;"<a
+ style="text-decoration: none; color: rgb(0, 0, 0);" href="DGOARE.pdf"
+ target="_blank">The Use of
 Scanner Data for Economics Research</a>" with Rachel Griffith and
 Martin O'Connell<br>
 </span></span><span style="font-style: italic; font-family: Calibri;"></span><span
