--- a/other.htm
+++ b/other.htm
@@ -284,10 +284,8 @@ Conferences</a></h3>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
-&nbsp; - ASSA Meeting, American Economic
-Association, January 9, 2022<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
 seminar, Uniersitat Pompeu Fabra, March 23, 2022<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
@@ -301,7 +299,12 @@ seminar, Uniersity of Mannheim, May 31, 2022<br>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.</span></span><span
+ style="font-family: Calibri;">&nbsp; </span><span
  style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; - ASSA Meeting, American Economic
+Association, January 9, 2022<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp;
 &nbsp; &nbsp; &nbsp;&nbsp; - Asia-Pacific Industrial
 Organization Conference, National University of Singapore, December 14,
 2021<br>
