--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -39,8 +39,8 @@ Gandhi
 and Shoshana Vasserman<br>
 <br>
 &nbsp; &nbsp; &nbsp;"<a
- style="text-decoration: none; color: rgb(0, 0, 0);" href="DGOARE.pdf"
- target="_blank">The Use of
+ style="text-decoration: none; color: rgb(0, 0, 0);"
+ href="DGO_ScannerData.pdf" target="_blank">The Use of
 Scanner Data for Economics Research</a>" with Rachel Griffith and
 Martin O'Connell<br>
 </span></span><span style="font-style: italic; font-family: Calibri;"></span><span
