--- a/other.htm
+++ b/other.htm
@@ -288,9 +288,11 @@ Conferences</a></h3>
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
 seminar, Uniersitat Pompeu Fabra, March 23, 2022<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- IO Seminar,
+Stanford University, May 3, 2022<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
-seminar, Uniersity of Mannheim, May 31, 2022<br>
+seminar, University of Mannheim, May 31, 2022<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - KU Leuven, June 8-9, 2022<br>
 </span><span style="font-family: Calibri;">
 </span><span style="font-family: Calibri;"></span><span
