--- a/Publications.htm
+++ b/Publications.htm
@@ -34,13 +34,21 @@
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; color: rgb(0, 0, 0); font-family: Calibri;"><big>
 <i><a name="main"></a>Main
-publications:</i></big></p>
-<ul style="color: rgb(0, 0, 0); font-family: Calibri;">
-</ul>
-<big><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span></big><span
- style="font-family: Calibri;"> <br>
-</span><span style="font-family: Calibri;">&nbsp; &nbsp; "<a
- style="text-decoration: none; color: rgb(0, 0, 0);"
+publications:&nbsp;</i></big></p>
+<span
+ style="font-size: 12pt; font-family: &quot;Calibri&quot;,sans-serif; color: black;"><i></i></span><br>
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
+ href="DGOARE.pdf" target="_blank">The Use of Scanner Data for
+Economics Research</a>", with </span><span
+ style="font-family: Calibri;">Rachel Griffith</span><span
+ style="font-family: Calibri;"> and&nbsp;</span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">Martin O'Connell,&nbsp;<span
+ style="font-weight: bold; font-style: italic;">Annual Review of
+Economics</span>, Volume 14</span><span style="font-family: Calibri;">,
+2022<br>
+<br>
+&nbsp; &nbsp; "<a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="duboistuncelmarch2021.pdf" target="_blank">Identifying
 the Effects
 of
