--- a/other.htm
+++ b/other.htm
@@ -280,11 +280,8 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;- TSE department seminar, Toulouse School of Economics,
-April 14, 2022<br>
-</span><span style="font-family: Calibri;"></span><span
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;- IO Seminar,
 Stanford University, May 3, 2022<br>
@@ -306,8 +303,14 @@ Economics, September 14, 2022<br>
  style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
- style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.</span></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;</span><span
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.</span></span>
+<span style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;
+&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;- TSE department seminar, Toulouse School of Economics,
+April 14, 2022</span><span style="font-family: Calibri;"></span></p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
