--- a/other.htm
+++ b/other.htm
@@ -305,7 +305,11 @@ Leuven, June 8-9, 2022<br>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Roundtable on
 Antibioresistance, Web conference Pharmaceutiques, June 10, 2022<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - 17th Annual Conference
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- </span>TSE
+Workshop on "Innovation, regulation and
+organization in healthcare", Paris, June 27, 2022<br>
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - 17th Annual Conference
 of GSF-GETO, Toulouse, June 30, 2022<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Stockholm School of
 Economics, September 14, 2022<br>
