--- a/contact.htm
+++ b/contact.htm
@@ -42,7 +42,9 @@ European Economic Association</a></span>
 &nbsp;Director <a style="color: rgb(0, 0, 0); text-decoration: none;"
  href="https://www.tse-fr.eu/health" target="_blank">TSE
 Health Center</a> (2021-)
-<font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;</font></div>
+<font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<br>
+&nbsp;Senior Member of <a href="https://www.iufrance.fr/"
+ target="_blank">Institut Universitaire de France</a> (2022-2027)</font></div>
 <div>&nbsp;<a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="http://www.ifs.org.uk/people/profile/377" target="_blank">IFS
