--- a/other.htm
+++ b/other.htm
@@ -290,8 +290,8 @@ Conferences</a></h3>
 &nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
 seminar, University of Mannheim, May 31, 2022<br>
 &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;- Conference "Rese</span><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">earch and
-Innovatio to reduce the
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">arch and
+Innovation to reduce the
 burden of antibiotic resistance: Strengthening the European
 action&rdquo;, Paris, June
 7, 2022</span>
@@ -304,11 +304,16 @@ Leuven, June 8-9, 2022<br>
 </p>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Roundtable on
-Antibioresistance, Web conference Pharmaceutiques, June 10, 2022<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- </span>TSE
+Antibioresistance, Web conference Pharmaceutiques, June 10, 2022</span><br>
+<span style="font-family: Calibri;">
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CSIO TSE</span>
+Conference, Toulouse, June 18, 2022<br>
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- </span>TSE
 Workshop on "Innovation, regulation and
 organization in healthcare", Paris, June 27, 2022<br>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - 17th Annual Conference
 of GSF-GETO, Toulouse, June 30, 2022<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Stockholm School of
