--- a/contact.htm
+++ b/contact.htm
@@ -43,8 +43,9 @@ European Economic Association</a></span>
  href="https://www.tse-fr.eu/health" target="_blank">TSE
 Health Center</a> (2021-)
 <font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<br>
-&nbsp;Senior Member of <a href="https://www.iufrance.fr/"
- target="_blank">Institut Universitaire de France</a> (2022-2027)</font></div>
+&nbsp;Senior Member of <a style="text-decoration: none;"
+ color="rgb(0,0,0)" href="https://www.iufrance.fr/" target="_blank">Institut
+Universitaire de France</a> (2022-2027)</font></div>
 <div>&nbsp;<a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="http://www.ifs.org.uk/people/profile/377" target="_blank">IFS
