--- a/other.htm
+++ b/other.htm
@@ -286,10 +286,9 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
-seminar, University of Mannheim, May 31, 2022<br>
-&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;- Conference "Rese</span><span
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+&nbsp;- Conference "Rese</span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">arch and
 Innovation to reduce the
 burden of antibiotic resistance: Strengthening the European
@@ -328,8 +327,12 @@ Economics, September 14, 2022<br>
 <span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;- IO Seminar,
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
+seminar, University of Mannheim, May 31, 2022<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;
+&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - IO Seminar,
 Stanford University, May 3, 2022<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
