--- a/other.htm
+++ b/other.htm
@@ -286,36 +286,8 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
-&nbsp;- Conference "Rese</span><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">arch and
-Innovation to reduce the
-burden of antibiotic resistance: Strengthening the European
-action&rdquo;, Paris, June
-7, 2022</span>
-<p class="MsoNormal"
- style="margin: 0cm -14.85pt 0.0001pt -24.5pt; text-align: justify; text-indent: -3.85pt;"><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&ldquo;Res
-&nbsp;</span> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Leuven Summer
-Event, KU
-Leuven, June 8-9, 2022<br>
-</p>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Roundtable on
-Antibioresistance, Web conference Pharmaceutiques, June 10, 2022</span><br>
-<span style="font-family: Calibri;">
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CSIO TSE</span>
-Conference, Toulouse, June 18, 2022<br>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- </span>TSE
-Workshop on "Innovation, regulation and
-organization in healthcare", Paris, June 27, 2022<br>
-<span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - 17th Annual Conference
-of GSF-GETO, Toulouse, June 30, 2022<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Stockholm School of
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Stockholm School of
 Economics, September 14, 2022<br>
 </span><span style="font-family: Calibri;">
 </span><span style="font-family: Calibri;"></span><span
@@ -323,12 +295,58 @@ Economics, September 14, 2022<br>
  style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
- style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.</span></span>
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.</span></span><span
+ style="font-family: Calibri;">&nbsp; </span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;"> &nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp; - 17th Annual Conference
+of GSF-GETO, Toulouse, June 30, 2022<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+- </span>TSE
+Workshop on "Innovation, regulation and
+organization in healthcare", Paris, June 27, 2022</p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;</span><span
+ style="font-family: Calibri;">
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; - CSIO TSE</span>
+Conference, Toulouse, June 18, 2022<br>
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span>
 <span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
+&nbsp;&nbsp;&nbsp; </span><span style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">
+&nbsp;</span> &nbsp;&nbsp; &nbsp; &nbsp; - Leuven Summer
+Event, KU
+Leuven, June 8-9, 2022<span style="font-family: &quot;Calibri&quot;,sans-serif;"
+ lang="EN-US"></span>&nbsp;</p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; - Roundtable on
+Antibioresistance, Web conference Pharmaceutiques, June 10, 2022</span></p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -24.5pt; text-align: justify; text-indent: -3.85pt;"><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; -</span><span
+ style="font-family: Calibri;"> Conference "Rese</span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">arch and
+Innovation to reduce the
+burden of antibiotic resistance: Strengthening the European
+action&rdquo;, Paris, June
+7, 2022</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span></p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; - </span><span
+ style="font-family: Calibri;">IO
 seminar, University of Mannheim, May 31, 2022<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
