--- a/other.htm
+++ b/other.htm
@@ -287,12 +287,24 @@ Conferences</a></h3>
  name="Forthcoming">Forthcoming</a>
 :</p>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - Journ&eacute;e Fili&egrave;re
+Bioth&eacute;rapie Innovation Occitanie, Montpellier</span><span
+ style="font-family: Calibri;">, </span><span
+ style="font-family: Calibri;">October 13, 2022</span><br>
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Stockholm School of
-Economics, September 14, 2022<br>
-</span><span style="font-family: Calibri;">
-</span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">Past :</span><!--[endif]-->
+Economics, November 16, 2022<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - Hong Kong University of Science and
+Technology, November 25, 2022<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - American Economic Association, New Orleans,
+January 6-8, 2023<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;- Seminar Lille Economie Management, March 14,
+2023<br>
+&nbsp;</span><span style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.</span></span><span
