--- a/contact.htm
+++ b/contact.htm
@@ -140,8 +140,7 @@ CV</a></font></div>
  target="_blank">Google Scholar Page</a></font></div>
 <div><font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<a
  style="text-decoration: none; color: rgb(0, 0, 0);"
- href="https://voxeu.org/users/pierredubois0" target="_blank">CEPR
-Vox page</a></font>
+ href="https://cepr.org/about/people/pierre-dubois" target="_blank">CEPR&nbsp;page</a></font>
 </div>
 <div>Address:
 </div>
