--- a/other.htm
+++ b/other.htm
@@ -304,6 +304,10 @@ January 6-8, 2023<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;- Seminar Lille Economie Management, March 14,
 2023<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;- Strategy Seminar, Kellogg, Nothwestern
+University, March 29,
+2023 </span><span style="font-family: Calibri;"><br>
 &nbsp;</span><span style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
