--- a/contact.htm
+++ b/contact.htm
@@ -55,7 +55,10 @@ Research Fellow</a>
 <div><span style="color: rgb(0, 0, 0);">&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="http://www.cepr.org/" target="_blank">CEPR</a>
-Research Fellow
+Research Fellow<br>
+&nbsp;<a style="color: rgb(0, 0, 0);"
+ href="https://www.econometricsociety.org/content/society-announces-election-38-fellows"
+ target="_blank">Fellow of the Econometric Society</a>
 </div>
 <div><span style="font-family: Calibri;">&nbsp;</span>Fellow
 of the <a style="text-decoration: none; color: rgb(0, 0, 0);"
