--- a/contact.htm
+++ b/contact.htm
@@ -57,8 +57,8 @@ Research Fellow</a>
  href="http://www.cepr.org/" target="_blank">CEPR</a>
 Research Fellow<br>
 &nbsp;<a style="color: rgb(0, 0, 0);"
- href="https://www.econometricsociety.org/content/society-announces-election-38-fellows"
- target="_blank">Fellow of the Econometric Society</a>
+ href="https://www.econometricsociety.org/content/society-announces-election-38-fellows">Fellow
+of the Econometric Society</a>
 </div>
 <div><span style="font-family: Calibri;">&nbsp;</span>Fellow
 of the <a style="text-decoration: none; color: rgb(0, 0, 0);"
