--- a/contact.htm
+++ b/contact.htm
@@ -56,7 +56,7 @@ Research Fellow</a>
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="http://www.cepr.org/" target="_blank">CEPR</a>
 Research Fellow<br>
-&nbsp;<a style="color: rgb(0, 0, 0);"
+&nbsp;<a style="color: rgb(0, 0, 0);" target="_blank"
  href="https://www.econometricsociety.org/content/society-announces-election-38-fellows">Fellow
 of the Econometric Society</a>
 </div>
