--- a/other.htm
+++ b/other.htm
@@ -1556,8 +1556,9 @@ Granular,
 San
 Francisco, US</li>
   <li><a href="https://www.rossiabirafeh.com/" target="_blank">Rossi
-Abi-Rafeh</a>, Empirical
-IO</li>
+Abi-Rafeh</a>, Essays in empirical industrial organization of
+advertising and platform markets, defended on September 9, 2022, now at
+Deliveroo London</li>
   <li>Malgorzata Majewska, IO and
 Health</li>
   <li>Gokce Gokkoca, IO and Health</li>
