--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -23,8 +23,7 @@ papers:</i></p>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><a
  name="IO"></a></p>
 <p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><i><br>
-</i></p>
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-weight: bold; font-family: Calibri;"><!--[endif]--></p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">
@@ -37,11 +36,11 @@ Abi-Rafeh, Rachel Griffith, Martin O'Connell<br>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style="">1.<span
- style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><!--[endif]--><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&ldquo;Merger
+ style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><span style="font-family: &quot;Calibri&quot;,sans-serif;"
+ lang="EN-US">"Merger
 and Advertising in the
-Pharmaceutical Industry&rdquo;, with Gosia Majewska<o:p></o:p></span></p>
+Pharmaceutical Industry", with Gosia Majewska<o:p></o:p></span></p>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
 </span></span><span style="font-family: Calibri;">&nbsp; &nbsp; &nbsp;</span><span
  style="font-family: Calibri;"></span><span
@@ -52,6 +51,9 @@ Drug Approvals" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 &nbsp;&nbsp; &nbsp; "Antibiotic Demand in the Presence of Antimicrobial
 Resistance", with G&ouml;k&ccedil;e G&ouml;kkoca<br>
 <br>
+&nbsp;&nbsp;&nbsp; &nbsp;"Optimal Intertemporal Setting of Drug
+Expenses: Hepatitis C as a case study" with Thierry Magnac<br>
+<br>
 </span><span style="font-family: Calibri;"><span lang="EN-US">
 &nbsp;&nbsp;&nbsp; "<a
  style="color: rgb(0, 0, 0); text-decoration: none;" href="DGV.pdf"
@@ -61,14 +63,8 @@ Reference Pricing in the Pharmaceutical Industry</a>" with Ashvin
 Gandhi
 and Shoshana Vasserman<br>
 <br>
-&nbsp; &nbsp; &nbsp;"<a
- style="text-decoration: none; color: rgb(0, 0, 0);"
- href="DGO_ScannerData.pdf" target="_blank">The Use of
-Scanner Data for Economics Research</a>" with Rachel Griffith and
-Martin O'Connell<br>
-</span></span><span style="font-style: italic; font-family: Calibri;"></span><span
- style="font-family: Calibri;"><br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
+</span></span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
  style="color: rgb(0, 0, 0); text-decoration: none;" href="dp.pdf"
  target="_blank">Price
 Dispersion and Information Frictions: Evidence from Supermarket
