--- a/contact.htm
+++ b/contact.htm
@@ -158,8 +158,11 @@ Esplanade de l'Universit&eacute;
 Toulouse Cedex 06
 </div>
 <div>France</div>
-<font style="font-family: Calibri;"><a
- href="https://voxeu.org/users/pierredubois0" target="_blank"><br>
-</a></font>
+<font style="font-family: Calibri;"><br>
+<br>
+<span style="font-weight: bold;">Current PhD student on the market: </span><a
+ style="font-weight: bold;" href="https://gosia-majewska.github.io/"
+ target="_blank">Gosia Majewska</a><br>
+<a href="https://voxeu.org/users/pierredubois0" target="_blank"></a></font>
 </body>
 </html>
